Init Fplayer Project
1. change sdk and ndk path please
2. add logo and progressbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FPlayer</string>
     <string name="logo_name">FPlayer_Logo</string>
+    <string name="title_activity_file_browser">FileBrowserActivity</string>
 </resources>
